tests/baselines/reference/typedefInnerNamepaths.errors.txt
bug25104.js(1,7): error TS2300: Duplicate identifier 'C'.
bug25104.js(3,19): error TS1005: '}' expected.
bug25104.js(4,26): error TS2300: Duplicate identifier 'C'.
bug25104.js(6,18): error TS8024: JSDoc '@param' tag has name '', but there is no parameter with that name.
bug25104.js(6,18): error TS1005: '}' expected.


==== bug25104.js (5 errors) ====
    class C {
          ~
!!! error TS2300: Duplicate identifier 'C'.
        /**
         * @typedef {C~A} C~B
                      ~
!!! error TS1005: '}' expected.
         * @typedef {object} C~A
                             ~
!!! error TS2300: Duplicate identifier 'C'.
         */
        /** @param {C~A} o */
                     
!!! error TS8024: JSDoc '@param' tag has name '', but there is no parameter with that name.
                     ~
!!! error TS1005: '}' expected.
        constructor(o) {
        }
    }
    